# projectmusiclabel

./: .env  .env.example  .gitignore  Procfile  README.md  bookingcalendario_dovemettere.html  build.sh  disponibilitàassociati_dovemettere.html  manage.py  pyproject.toml  quick_message_dovemettere.html  readme.md  readme.txt  render.yaml  requirements.txt  requirements_audio.txt  reset_and_migrate.sh  reset_db.sql  setup_admin.sh  unsaccodiroba
accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
api/: apps.py  docs.py  serializers.py  throttling.py  urls.py  views.py
artists/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
associates/: admin.py  forms.py  models.py  urls.py  views.py
booking/: admin.py  forms.py  models.py  urls.py  views.py  views.py.bak
core/: admin.py  admin_site.py  cache.py  cache_utils.py  decorators.py  email.py  metrics.py  middleware.py  models.py  storage.py  urls.py  views.py
docs/: setup_guide.md  technical_overview.md
messaging/: admin.py  apps.py  consumers.py  context_processor.py  context_processors.py  forms.py  models.py  routing.py  signals.py  urls.py  utils.py  views.py  views_new.py
music-label/: render.yaml  requirements.txt
music_label/: asgi.py  pyproject.toml  render.yaml  settings.py  urls.py  wsgi.py
record_label/: .env  asgi.py  logging.py  settings.py  settings_api.py  settings_cache.py  settings_email.py  settings_email.tmp  settings_media.py  settings_production.py  storage.py  urls.py  wsgi.py
reviews/: admin.py  cache.py  forms.py  models.py  urls.py  views.py
(+165 files in other folders)
