[tool.poetry]
name = "musiclabel_backend"
version = "0.1.0"
description = "Backend per etichetta musicale"
authors = ["Maurizio Morselli <tu@email.it>"]
readme = "README.md"
packages = [
  { include = "music_label" }
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
python-decouple = "^3.8"
django-debug-toolbar = "^4.4.6"
whitenoise = "^6.9.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"